ministr-tui/tests/snapshots/snapshot__console_lawns_compressed.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 80, 24)"
---
"  ministr                                                     engine ● running  "
"                                                 1 more › ╭──────────────────╮  "
"  ╭────────────────╮ ╭────────────────╮                   │ engine           │  "
"  │ ministr        │ │ cohaero        │                   │ ● running        │  "
"  │                │ │                │                   │ version 0.7.0    │  "
"  │ ■ ■ ■ ■ ■ ■ ■  │ │ ■ ■ ■ ■ ■ ■ ■  │                   │ 3 projects       │  "
"  │ ■ ■ ■ ■ ■ ■ ■  │ │ ■ ■ ■ ■ ■ ■ ■  │                   ╰──────────────────╯  "
"  │ ■ ■ ■ ■ ■ ■ ■  │ │ ■ □ ■ ■ ■ ■ ■  │                                         "
"  │ ■ □ ■ ■ ■ ■ ■  │ │ ■ ■ ■ ■ ■ ■ ▫  │                                         "
"  │ ■ ■ ■ ■ ▫ ■ ■  │ │ ■ ■ ■ □ ■ ■ ■  │                                         "
"  │ ■ ■ ■ ■ ■ ■ ■  │ │ ■ ■ ■ ■ ■ ■ ■  │                                         "
"  │ ■ ■ □ ■ ■ ■ ■  │ │ ■ ■ ■ ■ □ ■ ■  │                                         "
"  │ ■ ■ ■ ■ ■ ■ ■  │ │ ■ ■ ■ ■ ■ ■ ▫  │                                         "
"  │ ■ ■ ■ ■ ■ ■ ■  │ │ ■ ■ ■ ■ ■ ■ □  │                                         "
"  │ ■ ■ ▫ □ ■ ■ ■  │ │ ■ ■ ■ ■ ■ ■ ■  │                                         "
"  │ ■ ■ ■ ■ ■ ■ ■  │ │ ■ ■ ■ ■ ■ ■ ■  │                                         "
"  │ ■ ■ ■ ■ ■ ■ ■  │ │ ■ □ ■ ■ ■ ▫ ■  │                                         "
"  │ ■ ■ ■ ■ □ · ■  │ │ ■ ■ ■          │                                         "
"  │                │ │                │                                         "
"  │                │ │ ██████         │                                         "
"  │ up to date     │ │ updating 43%   │                                         "
"  │ 812 files      │ │ 1204 files     │                                         "
"  ╰────────────────╯ ╰────────────────╯                                         "
"  ← → select   enter open   r rebuild   a add   x remove   q quit               "
