ministr-tui/tests/snapshots/snapshot__console_lawns_spacious.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 120, 36)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────╮  ╭──────────────────────╮  ╭──────────────────────╮                ╭──────────────────────╮  "
"  │ ministr              │  │ cohaero              │  │ tock                 │                │ engine               │  "
"  │                      │  │                      │  │                      │                │ ● running            │  "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ □ ■ ■ ■ □ ■ ▫  │                │ version 0.7.0        │  "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ □ ■ ■ ■ □ ■ ■ ■ □ ▫  │                │ 3 projects           │  "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ □ ■ ■ ■ □ ■ ■ ▫ □  │                ╰──────────────────────╯  "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ □ ■ ■ ■ □ ■ ▫ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ □  │  │ ■ ■ ■ ■ ■ ■ □ ■ ■ ■  │  │ □ ■ ■ □ ■ ■ ■ □ ▫ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ □ ■ ■ □ ■ ■ ▫ □ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ □ ■ ■ □ ■ ▫ ■ □  │                                          "
"  │ ■ ■ ■ ▫ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ □ ■ ■ □ ▫ ■ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ▫ ■ ■ ■ ■ ■ ■ ■  │  │ □ ■ ■ · □ ■ ▫ □ ■ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ □  │  │ ■ ■ ■ □ ■ ■ ■ ■ ■ ■  │  │ ■ □ ■ ■ ■ □ ▫ ■ □ ■  │                                          "
"  │ · ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ □ ■ ■ ■ ▫ ■ ■ □  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ □ ■ ▫ ■ □ ■ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ □ ■ ■ ■ □ ▫ ■ ■ □ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ □ ■ ■ ■ □ ■ ■ ■ □  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ▫ ■ ■ □  │  │ □ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ □ ■ ▫ ■ □ ■ ■ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ □ ■ ■ □ ▫ ■ ■ □ ■ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ▫ ■ ■ ■ ■  │  │ ■ □ ■ ■ □ ■ ■ · □ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ □ ▫ ■ □ ■ ■ ■ □  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ■ ■ ■ ■ ■ □ ■ ■  │  │ ■ ■ ■ □ ■ ■ □ ■ ■ ■  │                                          "
"  │ ■ ■ ■ ■ ■ ■ ■ ■ □ ■  │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ □ ■ ■ ▫ □ ■ ■ □ ■ ■  │                                          "
"  │ · ■ ■                │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ □ ▫ ■ ■ □ ■ ■ □ ■  │                                          "
"  │                      │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │ ■ ■ ▫ ■              │                                          "
"  │                      │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │                      │                                          "
"  │                      │  │ ■ ■ ■ ■ □ ■ ■ ■ ■ ■  │  │                      │                                          "
"  │                      │  │ ■ ■ ■ ■ ■ ■ ■ ■ ▫ ■  │  │                      │                                          "
"  │                      │  │ ■ ■ ■ ■ ■ ■ ■ ■ ■ ■  │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │ ████████▋            │  │                      │                                          "
"  │ up to date           │  │ updating 43%         │  │ needs update         │                                          "
"  │ 812 files            │  │ 1204 files           │  │ 640 files            │                                          "
"  ╰──────────────────────╯  ╰──────────────────────╯  ╰──────────────────────╯                                          "
"  ← → select   enter open   r rebuild   a add   x remove   q quit                                                       "
