ministr-tui/tests/snapshots/snapshot__console_meters_at_fractional_percents.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 120, 36)"
---
"  ministr                                                                                             engine ● running  "
"  ╭──────────────────────╮  ╭──────────────────────╮  ╭──────────────────────╮                ╭──────────────────────╮  "
"  │ alpha                │  │ beta                 │  │ gamma                │                │ engine               │  "
"  │                      │  │                      │  │                      │                │ ● running            │  "
"  │                      │  │                      │  │                      │                │ version 0.7.0        │  "
"  │                      │  │                      │  │                      │                │ 3 projects           │  "
"  │                      │  │                      │  │                      │                ╰──────────────────────╯  "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │ ██▌                  │  │ ████████▋            │  │ █████████████████▍   │                                          "
"  │ updating 13%         │  │ updating 43%         │  │ updating 87%         │                                          "
"  │ 100 files            │  │ 100 files            │  │ 100 files            │                                          "
"  ╰──────────────────────╯  ╰──────────────────────╯  ╰──────────────────────╯                                          "
"  ← → select   enter open   r rebuild   a add   x remove   q quit                                                       "
