ministr-tui/tests/snapshots/snapshot__console_overflow_edge_markers_spacious.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 120, 36)"
---
"  ministr                                                                                             engine ● running  "
"  ‹ 7 more                                                                                    ╭──────────────────────╮  "
"  ╭──────────────────────╮  ╭──────────────────────╮  ╭──────────────────────╮                │ engine               │  "
"  │ project-08           │  │ project-09           │  │ project-10           │                │ ● running            │  "
"  │                      │  │                      │  │                      │                │ version 0.7.0        │  "
"  │                      │  │                      │  │                      │                │ 10 projects          │  "
"  │                      │  │                      │  │                      │                ╰──────────────────────╯  "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │                      │  │                      │  │                      │                                          "
"  │ up to date           │  │ up to date           │  │ up to date           │                                          "
"  │ 800 files            │  │ 900 files            │  │ 1000 files           │                                          "
"  ╰──────────────────────╯  ╰──────────────────────╯  ╰──────────────────────╯                                          "
"  ← → select   q quit                                                                                                   "
