ministr-tui/tests/snapshots/snapshot__console_populated_stacked.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 60, 20)"
---
"  ministr                                 engine ● running  "
"  ministr                            up to date  812 files  "
"  cohaero            █████▏       updating 43%  1204 files  "
"  tock                             needs update  640 files  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"  ← → select   enter open   r rebuild   a add   x remove    "
