ministr-tui/tests/snapshots/snapshot__console_remove_confirms_on_the_bar_stacked.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render(&mut app, 60, 20)"
---
"  ministr                                 engine ● running  "
"  ministr                            up to date  812 files  "
"  cohaero    █████▏       remove this project?  1204 files  "
"  tock                             needs update  640 files  "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"                                                            "
"  y remove   n keep                                         "
