ministr-tui/tests/snapshots/snapshot__console_selection_brightens_the_frame_not_a_color.snap
---
source: ministr-tui/tests/snapshot.rs
expression: "render_styled(&mut app, 80, 24)"
---
Buffer {
    area: Rect { x: 0, y: 0, width: 80, height: 24 },
    content: [
        "  ministr                                                     engine ● running  ",
        "                                                 1 more › ╭──────────────────╮  ",
        "  ╭────────────────╮ ╭────────────────╮                   │ engine           │  ",
        "  │ ministr        │ │ cohaero        │                   │ ● running        │  ",
        "  │                │ │                │                   │ version 0.7.0    │  ",
        "  │                │ │                │                   │ 3 projects       │  ",
        "  │                │ │                │                   ╰──────────────────╯  ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │                │                                         ",
        "  │                │ │ ██████         │                                         ",
        "  │ up to date     │ │ updating 43%   │                                         ",
        "  │ 812 files      │ │ 1204 files     │                                         ",
        "  ╰────────────────╯ ╰────────────────╯                                         ",
        "  ← → select   q quit                                                           ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 78, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 57, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 1, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 60, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 76, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 2, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 4, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD | DIM,
        x: 18, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 37, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 3, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 4, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 5, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 58, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 6, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 7, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 8, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 9, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 10, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 11, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 12, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 13, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 14, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 15, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 16, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 17, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 18, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 19, fg: Rgb(21, 125, 146), bg: Reset, underline: Reset, modifier: NONE,
        x: 24, y: 19, fg: Rgb(24, 145, 170), bg: Reset, underline: Reset, modifier: NONE,
        x: 25, y: 19, fg: Rgb(28, 166, 193), bg: Reset, underline: Reset, modifier: NONE,
        x: 26, y: 19, fg: Rgb(31, 186, 217), bg: Reset, underline: Reset, modifier: NONE,
        x: 27, y: 19, fg: Rgb(50, 196, 226), bg: Reset, underline: Reset, modifier: NONE,
        x: 28, y: 19, fg: Rgb(74, 203, 229), bg: Reset, underline: Reset, modifier: NONE,
        x: 29, y: 19, fg: Rgb(85, 207, 231), bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 19, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 20, fg: Rgb(85, 207, 231), bg: Reset, underline: Reset, modifier: NONE,
        x: 37, y: 20, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 23, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 37, y: 21, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 20, y: 22, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
        x: 2, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: DIM,
        x: 78, y: 23, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
